syntax = "proto3";

package statement;

service StatementService {
  rpc GetAll (GetAllDto) returns (TransactionsList) {}
  rpc SavePurchaseOnStatement (Purchase) returns (Empty) {}
  rpc SaveTransferOnStatement (Transfer) returns (Empty) {}
}

message Transaction {
  string id=1;
  string transferId=2;
  string purchaseId=3;
  string type=4;
  string status=5;
  string sourceDestinationName=6;
  string date=7;
  double amount=8;
  int32 accountId=9;
}

message GetAllDto {
  int32 accountId=1;
}

message TransactionsList {
  repeated Transaction transactions = 1;
}

message Purchase {
  string id=1;
  string cnpj=2 ;
  string merchantName=3;
  string date=4;
  string type=5;
  string status=6;
  int32 accountId=7;
  double amount=8;
}

message Transfer {
  string id= 1;
  string type= 2;
  string status= 3;
  string sourceDestinationName= 4;
  string date= 5;
  int32 accountId=6;
  double amount=7;
}

message Empty {}